--- a/index.html
+++ b/index.html
@@ -129,6 +129,26 @@
     </div>
 </section>
 
+<section class="create">
+    <div class="container">
+        <div class="create_wrapper">
+            <div class="create_wrapper-item">
+                <p class="create_smalltext"><img src="img/20__img.png" alt=""></p>
+                <h1 class="create-h1 h1_number">Years Of Successful Working <br>
+                    The Market</h1>
+
+                <button class="btn create_btn">CONTACT</button>
+            </div>
+
+            <div class="create_wrapper-item">
+                
+                <img src="img/about pic 2.png" alt="img" class="create_img">
+                <div class="number__img-shadow"></div>
+            </div>
+        </div>
+    </div>
+</section>
+
     
 </body>
 </html>
