--- a/index.html
+++ b/index.html
@@ -149,6 +149,35 @@
     </div>
 </section>
 
+<section class="works">
+    <div class="container">
+        <div class="works__text">
+            3000+ Completed Work <br>Which WE have Successfully Done
+        </div>
+
+        <div class="works__wrapper">
+            <div class="works__item">
+                <p class="works_num">980</p>
+                <p>Project</p>
+            </div>
+
+            <div class="works__item">
+                <p class="works_num">520</p>
+                <p>Happy Client</p>
+            </div>
+
+            <div class="works__item">
+                <p class="works_num">330</p>
+                <p>Winners</p>
+            </div>
+
+            <div class="works__item">
+                <p class="works_num">120</p>
+                <p>Recoment</p>
+            </div>
+        </div>
+    </div>
+</section>
     
 </body>
 </html>
