new section - clients

--- a/index.html
+++ b/index.html
@@ -178,6 +178,49 @@
         </div>
     </div>
 </section>
+
+
+<section class="clients">
+    <div class="container">
+        <p class="clients_texttop">TESTIMONIALS</p>
+        <h3 class="clients_h3">
+            Client says about us
+        </h3>
+
+        <div class="btn_arr arr_clients"> 
+            <button class="service_arroy">></button> 
+            <button class="service_arroy"><</button>
+        </div>
+
+        <div class="clients_wrapper">
+
+            <div class="clients_wrapper-item">
+                <img src="img/clients1.png" alt="" class="clients_img">
+                <div class="clients-item__text">
+                    <p class="clients-item__text-small"><b class="b_size">Louis Saville</b>/CEO at Google inc</p>
+                    <p class="clients-item__text-big">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua.</p>
+                </div>
+            </div>
+
+
+            <div class="clients_wrapper-item">
+                <img src="img/clients2.png" alt="" class="clients_img">
+                <div class="clients-item__text">
+                    <p class="clients-item__text-small"> <b class="b_size">Rekha Varadwaz </b>/Manager at Nike inc</p>
+                    <p class="clients-item__text-big">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    
+
+
+</section>
     
 </body>
 </html>
